Update integrator.bat